--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-24 13:19:46
+lastsearch = 2024-07-24 15:52:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 20.8%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html?sp=new
+match = 29.2%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
 match = -54.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -58.3%%
-title = Mùng Đỉnh Vuông Cao Cấp 1m8 x 2m x 1m7 CHÂN VIỀN
-url = https://www.mantubung.com/mung-chup-dinh-rong-1m8-x-2m-bao-bao-2-cua-67344.html
+match = -12.5%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
 match = 20.8%%
@@ -67,8 +67,8 @@ title = Pan-Asian Metropolis — Asian Angeleno Musicians
 url = https://ericbrightwell.com/2016/05/22/directory-of-asian-american-musicians-of-southern-california/
 
 [www.facebook.com]
-match = -70.8%%
-title = ️ GENTHERM - THỬ THÁCH CÓ THƯỞNG Bạn có kế hoạch gì ...
+match = -45.8%%
+title = ♥️ GENTHERM - THỬ THÁCH CÓ THƯỞNG Bạn có kế ...
 url = https://www.facebook.com/100057109373471/videos/️-gentherm-thử-thách-có-thưởngbạn-có-kế-hoạch-gì-trong-dịp-nghỉ-lễ-giỗ-tổ-hùng-v/346729105070806/
 
 [vi.wikipedia.org]
