--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-24 16:33:38
+lastsearch = 2024-07-24 17:16:29
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+match = 10.7%%
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -147,14 +147,14 @@ title = Andrea schmider facebook [t8zAms] - external-link - Kvaser
 url = https://www.kvaser.cn/en/external-link/?url=https://detsad147vrn.ru/m7kv6ocwwwnurcecombramafe85
 
 [www.staleyfarmshomeskc.com]
-match = -92.9%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -60.7%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -7.1%%
-title = 3d laser scanner sick - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1af6a9ad0c.xn--p1ai/54169278qy266comv4fe36a
+match = -25.0%%
+title = Nachthelle movie watch online - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1ac5aidf.xn--p1ai/42316975nhntqxre7dc9v1cfdv4fe36a
 
 [news.google.it]
 match = -3.6%%
