--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-24 10:50:28
+lastsearch = 2024-07-24 19:24:23
 
 [www.facebook.com]
-match = -141.2%%
-title = Mom asked "have anyone heard of Mo Dan? My fren ...
-url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-of-mo-dan-my-fren-has-been-fever-on-and-off-for-almo/10150974043136876/
+match = -182.4%%
+title = Mothership - The Mao Shan Wang durians are priced at S ...
+url = https://www.facebook.com/story.php/?story_fbid=892901902878579&id=100064763316351
 
 [www.teadrunk.com]
 match = -100.0%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -7.7%%
