--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-24 16:20:00
+lastsearch = 2024-07-24 19:28:21
 
 [chieutruc.info]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = [HD] Chiếu cói Kim Sơn - Ninh Bình
 url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
-match = 52.6%%
-title = Chiếu cói Thái Bình
-url = https://www.facebook.com/p/Chiếu-cói-Thái-Bình-61553085584219/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -109.1%%
