--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-24 18:26:55
+lastsearch = 2024-07-24 19:23:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -197,9 +197,9 @@ title = Người đàn ông đi lạc trong rừng Quảng Nam suốt 4 ngày ..
 url = https://thanhnien.vn/nguoi-dan-ong-di-lac-trong-rung-quang-nam-suot-4-ngay-chi-uong-nuoc-cam-hoi-185240608180716305.htm
 
 [baotintuc.vn]
-match = -175.0%%
-title = Triển vọng thương mại Canada - Việt Nam sau 30 hợp tác
-url = https://baotintuc.vn/thoi-su/trien-vong-thuong-mai-canada-viet-nam-sau-30-hop-tac-20240719083820724.htm
+match = -193.8%%
+title = Ấn tượng với tầm nhìn và phong cách của Tổng Bí thư ...
+url = https://baotintuc.vn/thoi-su/gioi-hoc-gia-tai-singapore-an-tuong-voi-tam-nhin-va-phong-cach-cua-tong-bi-thu-nguyen-phu-trong-20240724080522401.htm
 
 [tamanhhospital.vn]
 match = -212.5%%
@@ -502,9 +502,9 @@ title = AEON MALL Tân Phú Celadon - Điểm vui chơi và mua sắm ...
 url = https://aeonmall-tanphuceladon.com.vn/
 
 [www.evn.com.vn]
-match = -131.2%%
-title = NHÀ LÃNH ĐẠO LỖI LẠC, TRỌN ĐỜI VÌ NƯỚC, VÌ DÂN
-url = https://www.evn.com.vn/d6/news/TONG-BI-THU-NGUYEN-PHU-TRONG-NHA-LANH-DAO-LOI-LAC-TRON-DOI-VI-NUOC-VI-DAN-6-12-125165.aspx
+match = -175.0%%
+title = Hà Tĩnh tiếp tục đồng hành cùng EVN/EVNNPT để hoàn ...
+url = https://www.evn.com.vn/d6/news/Ha-Tinh-tiep-tuc-dong-hanh-cung-EVNEVNNPT-de-hoan-thanh-Du-an-duong-day-500kV-mach-3-6-12-125224.aspx
 
 [lug.vn]
 match = -31.2%%
@@ -602,9 +602,9 @@ title = 8 trường hợp tiếp xúc gần ca bệnh bạch hầu ở Bắc Gia
 url = https://daibieunhandan.vn/suc-khoe/8-truong-hop-tiep-xuc-gan-ca-benh-bach-hau-o-bac-giang-co-ket-qua-am-tinh-i379518/
 
 [m.facebook.com]
-match = -131.2%%
-title = Mông Tự - Kiến Thuỷ | 𝐂𝐡𝐮̀𝐦 𝐭𝐨𝐮𝐫 𝐡𝐞̀ 𝐠𝐢𝐚́ 𝐜𝐮̛̣𝐜 𝐬𝐨̂́𝐜
-url = https://m.facebook.com/groups/245992163693772/posts/794612542165062/
+match = -143.8%%
+title = Tràng An Travel - Nắng chiều Lạc Dương, Trung Quốc 🏞️
+url = https://m.facebook.com/story.php/?story_fbid=366749612732298&id=100081917851165
 
 [mia.vn]
 match = -225.0%%
@@ -755,4 +755,9 @@ url = https://nso.com.vn/en/n/list/industrial-parks-19
 match = -225.0%%
 title = Quyết định số 405/QĐ-VPĐK v/v huỷ Giấy chứng nhận quyền ...
 url = https://sotnmt.soctrang.gov.vn/mDefault.aspx?sname=stn&sid=1284&pageid=177&catid=66062&id=389190&catname=Nam-2024&title=Quyet-dinh-so-405-QD-VPDK-v-v-huy-Giay-chung-nhan-quyen-su-dung-dat-so-phat-hanh-AK-902162--do-UBND-huyen-Nga-Nam-ky-cap-cho-ho-ong-Pham-Thanh-Chieu-va-ba-Dinh-Thi-Bay
+
+[dukccq.nghean.gov.vn]
+match = -218.8%%
+title = Tổng Bí thư Nguyễn Phú Trọng - Nhà Lãnh đạo lỗi lạc, trọn ...
+url = https://dukccq.nghean.gov.vn/tin-trong-nuoc/tong-bi-thu-nguyen-phu-trong-nha-lanh-dao-loi-lac-tron-doi-vi-nuoc-vi-dan-667654
 
