--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-24 17:48:38
+lastsearch = 2024-07-24 19:24:46
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -29,12 +29,12 @@ url = https://shopee.vn/search?keyword=chiếu trúc hạt
 [www.diepxuan.com]
 match = 28.6%%
 title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html?srsltid=AfmBOopvD1LzrPK8TxjYLtyA3WC-xQGoEFOrRgdOuPOAd2jfHCaNCTMa
 
 [www.lazada.vn]
 match = 70.4%%
 title = Chiếu trúc Quế Lâm .1,6 ×2m
-url = https://www.lazada.vn/products/chieu-truc-que-lam-16-2m-i1517425180.html
+url = https://www.lazada.vn/products/chieu-truc-que-lam-16-2m-i1517425180.html?srsltid=AfmBOor4uffRd7K2h3QnqNG7by5DCTfR2hTT_BEro1H4NdLvJ9z3NtPi
 
 [www.facebook.com]
 match = -21.1%%
