--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-24 13:51:34
+lastsearch = 2024-07-24 19:31:29
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -105.9%%
-title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
-url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
+match = 64.7%%
+title = Ruột gối ép hơi Korea
+url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 
 [demxanh.com]
 match = -135.3%%
@@ -57,9 +57,9 @@ title = Combo 2 Ruột Gối Bông Ép Korea Hút Chân Không Hà Nội
 url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html
 
 [dienmaytinphong.com]
-match = -70.6%%
-title = Ruột gối nằm dưỡng nhan bông lông vũ Bygu
-url = https://dienmaytinphong.com/ruot-goi-nam-duong-nhan-bong-long-vu
+match = -12.5%%
+title = Ruột gối
+url = https://dienmaytinphong.com/ruot-goi
 
 [tuhomes.vn]
 match = -58.8%%
