--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-24 15:23:32
+lastsearch = 2024-07-24 19:28:32
 
 [shopee.vn]
-match = -87.5%%
-title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
-url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
+match = -25.0%%
+title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
+url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-dng/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
+url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
