--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-24 19:31:07
+lastsearch = 2024-07-24 21:14:30
 
 [shopee.vn]
 match = 7.4%%
@@ -19,7 +19,7 @@ url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tu
 [www.lazada.vn]
 match = -44.4%%
 title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
-url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html
+url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html?srsltid=AfmBOoocB0TSXDQo_YGy9Uo8XdW0EpERbPLmtzP5pSRJGQhtgsh4dBGk
 
 [tiki.vn]
 match = 11.1%%
@@ -164,7 +164,7 @@ url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOop7HYD-gzqiVXwcS-RyqCNp4OMBCgOUsVk79iVhOskjzasHWQrR
 
 [dogiasi.net]
 match = -55.6%%
