--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-24 20:32:50
+lastsearch = 2024-07-24 21:16:26
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOortGjq_rt4mje-x4xRy1ttGzVCl3Tc6URfY3_MPCePzXRKQydja
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOorKrbhjbS97ljSfDCVv9G_HHu2LXB8kCa1hZzPze8keGBNZGdIj
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOorojHDQirRMWvogNTpxV2MpVQ6Wn4BkpYUslF0qFYfgdFvF-M4U
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -109,7 +109,7 @@ url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOoqdf4sDQJriQ-FCIHeUwv8Y-9o5HtQyR62WvRUy5EplALtGCZdP
 
 [theonenoithat.com]
 match = -30.0%%
