--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-24 15:19:18
+lastsearch = 2024-07-24 22:34:57
 
 [everon.online]
 match = 19.2%%
@@ -29,7 +29,7 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoqL2tenvtAPrDfGcOiP9qSUzFzj8LJcdinmn10Z4qIDnn12Biua
 
 [www.tiktok.com]
 match = -5.6%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUYFuD0G&sig=ACfU3U2LmGaay0a8yMykjifk2HaCZvZvsg&hl=en&sa=X&ved=2ahUKEwjX-pH6nr-HAxWpLEQIHXeLA64Q6AF6BAgYEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUYIqE4F&sig=ACfU3U2xouZB2QnQHphqPb3vL5MwW_ubLw&hl=en&sa=X&ved=2ahUKEwiszoqqgMCHAxVDkIkEHXqsDDMQ6AF6BAgVEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -61.5%%
 title = Cách giặt ruột gối Everon bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOopbNn9HlQq0yyUzqaqp5aUGUhovbPCHzNWFK0ItR0WQ-uqBQhCz
 
 [www.youtube.com]
 match = -69.2%%
