--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-24 21:50:59
+lastsearch = 2024-07-24 22:34:45
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -17.6%%
 title = Bộ chăn ga chun, gối Everon SR-03 chất liệu 100%% cotton ...
-url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03
+url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03?srsltid=AfmBOopClMXlswONH-0jv3TfJcZOI0WkEQCt2Gw02DWswsQ56ugTUOeR
 
 [tiki.vn]
 match = 29.4%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -8.8%%
-title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
+match = -20.6%%
+title = Bộ chăn ga Everon ESB-22020 mang phong cách trẻ trung ...
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-22020-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
