--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-24 20:00:23
+lastsearch = 2024-07-24 22:35:46
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,9 +22,9 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
 match = -28.6%%
@@ -69,7 +69,7 @@ url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-ho
 [demxanh.com]
 match = -42.9%%
 title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu trắng ...
-url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html?srsltid=AfmBOoo6QAcry13yCZcxzAX3SDxdK7zIKKD3zuxru8rEUimC2DQl27PB
+url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html
 
 [chiaki.vn]
 match = 10.7%%
