--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-24 21:50:28
+lastsearch = 2024-07-24 22:29:54
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -13.0%%
-title = List of TCP and UDP port numbers
-url = https://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
