--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-24 20:37:51
+lastsearch = 2024-07-24 22:33:53
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Vỏ gối kê xoa 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPC21054 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epc21054-45x65.html
+match = -100.0%%
+title = Vỏ gối ES1707 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-es1707-45x65.html
 
 [shopee.vn]
 match = -127.8%%
